# LibGPU

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CompileShader.py  GenPreset.py  README.md  main.cpp
Resources/Shaders/: Test.json
Resources/Shaders/TestShader/: VK_TestShader.frag  VK_TestShader.vert
Resources/Shaders/TestShader/GLSL/: Test.Frag  Test.vert
Resources/Shaders/TestShader/HLSL/: Test.hlsl
src/: App.cpp  App.hpp  Graphics.cpp  Graphics.hpp  LibGPUWindow.cpp  LibGPUWindow.hpp  main.cpp
